test/libsolidity/syntaxTests/literalSuffixes/parameters/overloading_between_suffix_and_function_disallowed_call_of_non_suffix.sol
function s(uint) pure suffix returns (uint) {}
function s(string memory) pure returns (string memory) {}

contract C {
    function run() public pure {
        "a" s;
    }
}
// ----
// TypeError 2144: (164-165): No matching declaration found after variable lookup.
